# akkapros

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SHOWCASE.md  SUPPORT.md  akkadian_generator.py  build_meta_hook.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  task_progress.md  test_results.txt
.github/: copilot-instructions.md
data/lexlinks/: erra-and-ishum-lexical-analysis.md
data/lexlinks/atfparse_prep/: erra_orig.txt  erra_proc.txt  erra_trans.txt
data/samples/: L I.2 Poem of Creation SB II.atf  L I.2 Poem of Creation SB IV.atf  L I.2 Poem of Creation SB VII.atf  L III.3 Marduk’s Address to the Demons SB.atf  L_I.2_Poem_of_Creation_SB_VI.atf  README.md  erra-and-ishum-SB.atf
demo/: README.md
demo/akkapros/: corpus-demo.ps1  corpus-demo.sh
demo/akkapros/lexlinks/: construct-demo.ps1  construct-demo.sh  construct-demo.yaml
demo/akkapros/phoneprep/: phoneprep-demo.ps1  phoneprep-demo.sh
demo/akkapros/prosmaker/: corpus-demo.ps1  corpus-demo.sh  corpus-demo.yaml
demo/akkapros/results/: corpus-lob-p30_metrics.txt  corpus-lob-p35_metrics.txt  corpus-lob-p40_metrics.txt  corpus-lob_accent_acute.txt  corpus-lob_accent_bold.md  corpus-lob_accent_ipa.txt  corpus-lob_tilde.txt  corpus-sob-p30_metrics.txt  corpus-sob-p35_metrics.txt  corpus-sob-p40_metrics.txt  corpus-sob_accent_acute.txt  corpus-sob_tilde.txt  (+6 more)
demo/akkatts/: demo-phoneprep.ps1  demo-phoneprep.sh  phoneprep-demo.ps1  phoneprep-demo.sh
doc/akkapros/: repair-algorithm.md
docs/: GETTING_STARTED.md
docs/adr/: 000-adr-template.md  001-cli-lib-separation.md  002-centralized-version-management.md  003-output-prefix-convention.md  004-stage-pipeline-and-pivot-format.md  005-ebl-atf-normalization-policy.md  006-syllabifier-line-and-hyphen-policy.md  007-two-phase-diphthong-processing.md  008-bimoraic-prosody-and-accent-styles.md  009-function-word-and-merge-policy.md  010-metrics-from-text-and-dual-percent-v.md  011-multi-format-printer-outputs.md  012-phoneprep-coverage-and-sidecars.md  013-canonical-docs-location-and-build-sync.md  014-cli-built-in-self-tests.md  015-semantic-versioning-and-release-discipline.md  016-diphthong-restoration-constraint-system.md  017-pause-modeling-and-bimoraic-correction.md  018-extensible-phonetic-inventory.md  019-ipa-output-variant-policy.md  020-deterministic-merge-traversal.md  021-multi-target-printer-architecture-contract.md  022-output-format-public-contract-boundaries.md  023-rename-repair-to-accentuation.md  024-command-escape-syntax.md  README.md  index.md
docs/akkapros/: atfparser.md  configuration.md  confwriter.md  diphthong-processing.md  fullprosmaker.md  fullreparer.md  mbrola-dataset-prep.md  mbrola-voice-prep.md  metricalc.md  metrics-computation.md  metrics-coverage-matrix.md  metricser.md  phoneprep.md  phonetizer-algorithm.md  phonetizer-data-model.md  phonetizer-phone-file-guide.md  phonetizer.md  printer.md  prosmaker.md  prosody-realization-algorithm.md  release-strategy.md  repair-algorithm.md  repairer.md  syllabifier.md  utils.md  varco-verification.md  word-count-verification.md  xar-script.md
docs/akkatts/: mbrola-dataset-prep.md  phoneprep.md
docs/cr/: README.md  index.md
docs/internal/: GUIDELINES.md  README.md  coding-style.md
patch-stack/: README.md  apply-mbrolator-patches.ps1  apply-mbrolator-patches.sh
patch-stack/mbrolator/: 0001-resynthesis-src-resynth-windows-drand48.patch
release-notes/: unreleased.md  v1.0.0.md  v1.0.1.md  v2.0.0.md  v3.0.0.md  v3.0.1.md  v3.0.2.md
scripts/: build_package.py  check_md_links.py  compute_pause_for_text.py  debug_pause_durations.py  fix_posix_newline.py  gen_code_graph.py  git-commit-cr.py  migrate-escapes.py  run_fullprosmaker.py  smoke_test_verify.py  sync_doc_flowcharts.py  sync_docs.ps1  sync_docs.py  update-indexes.py  update_unreleased.py
src/: atf_parser.py  metrics.py  repair.py  syllabify.py
src/akkapros/: __init__.py
src/akkatts/: README.md  __init__.py
tests/: dependency_map.yaml  test_akkadian_likelihood.py  test_akkdiphones_small_set.py  test_cli_logging.py  test_config_support.py  test_diphthongs.py  test_doc_flowcharts.py  test_format_validation.py  test_frontmatter_append.py  test_gencode_diphthongs.py  test_git_commit_cr_script.py  test_integration.py  test_integration_append_frontmatter.py  test_metrics_stats.py  test_phoneprep_lib.py  test_phonetize_lib.py  test_print_merger.py  test_prosody_mora_mode.py  test_punctuation_whitelist.py  test_selftests_cli.py  test_selftests_lib.py  test_update_indexes_script.py
tests/integration_refs/: L_I.2_Poem_of_Creation_SB_II.atf  lexlinks_construct_proc_fixture.txt  regression_defaults.yaml
(+426 files in other folders)
