[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akkapros"
version = "1.0.0"
description = "Akkadian accentuation reconstruction toolkit"
readme = "README.md"
authors = [{ name = "Samuel KABAK", email = "samuel.kabak@gmail.com" }]
license = { text = "MIT License" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black",
    "flake8",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["akkapros*"]

[tool.setuptools.package-data]
"akkapros" = ["docs/*.md"]

[project.scripts]
akkapros-fullprosmaker = "akkapros.cli.fullprosmaker:main"
akkapros-syllabifier = "akkapros.cli.syllabifier:main"
akkapros-prosmaker = "akkapros.cli.prosmaker:main"
akkapros-metricalc = "akkapros.cli.metricalc:main"
akkapros-atfparser = "akkapros.cli.atfparser:main"
akkapros-printer = "akkapros.cli.printer:main"
akkapros-phoneprep = "akkapros.cli.phoneprep:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
