[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akkapros"
dynamic = ["version"]
description = "Akkadian accentuation reconstruction toolkit"
readme = "README.md"
authors = [{ name = "Samuel KABAK", email = "samuel.kabak@gmail.com" }]
license = "MIT"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "build>=1.0.0",
    "pytest>=7.0.0",
    "black",
    "flake8",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["akkapros*"]

[tool.setuptools.dynamic]
version = { attr = "akkapros.__version__" }

[tool.setuptools.package-data]
"akkapros" = ["docs/*.md"]

[tool.build]
generate = [
    "python -m akkapros._gencode.lib_diphthongs",
]

[project.scripts]
akkapros-fullprosmaker = "akkapros.cli.fullprosmaker:main"
akkapros-syllabifier = "akkapros.cli.syllabifier:main"
akkapros-prosmaker = "akkapros.cli.prosmaker:main"
akkapros-metricalc = "akkapros.cli.metricalc:main"
akkapros-atfparser = "akkapros.cli.atfparser:main"
akkapros-printer = "akkapros.cli.printer:main"
akkapros-phoneprep = "akkapros.cli.phoneprep:main"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["tests"]
python_files = "test_*.py"
pythonpath = ["src"]
